Added documentation to model creation and removed copied notebook.

--- a/song_recommender.ipynb
+++ b/song_recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -235,19 +235,20 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Read in our Spotify songs dataset and output first five rows.\n",
     "dataset = pd.read_csv(os.getcwd() + '/spotify_songs.csv')\n",
     "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -270,16 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_features = ['track_artist',  \n",
-    "                        'track_album_name', \n",
-    "                        'playlist_name', \n",
-    "                        'playlist_genre', \n",
-    "                        'playlist_subgenre']\n",
-    "\n",
     "numeric_features = ['track_popularity',\n",
     "                    'danceability', \n",
     "                    'energy', \n",
@@ -293,14 +288,13 @@
     "                    'valence', \n",
     "                    'tempo']\n",
     "\n",
-    "test_categorical = [\n",
-    "                    'playlist_genre',\n",
-    "                    'playlist_subgenre']"
+    "categorical_features = ['playlist_genre',\n",
+    "                        'playlist_subgenre']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -540,23 +534,23 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "encoder = OneHotEncoder()\n",
-    "# Changed to use test_categorical, a set of variables that doesn't have the 10k+ entry problem mainly for testing\n",
-    "encoded_categorical = encoder.fit_transform(dataset[test_categorical]).toarray()\n",
-    "encoded_categorical_df = pd.DataFrame(encoded_categorical, columns=encoder.get_feature_names_out(test_categorical))\n",
+    "# Take each categorical feature column from the dataset, transform with a OneHotEncoder, then create a Pandas DataFrame.\n",
+    "encoded_categorical = encoder.fit_transform(dataset[categorical_features]).toarray()\n",
+    "encoded_categorical_df = pd.DataFrame(encoded_categorical, columns=encoder.get_feature_names_out(categorical_features))\n",
     "\n",
     "encoded_categorical_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -690,14 +684,16 @@
        "4    -0.702460     -0.432701         -0.377953 -0.692585  0.919777  0.115037  "
       ]
      },
-     "execution_count": 377,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scaler = StandardScaler()\n",
+    "# Pull all numerical feature columns and scale them using StandardScaler.\n",
     "scaled_numerical = scaler.fit_transform(dataset[numeric_features])\n",
+    "# Create Pandas DataFrame from scaled data.\n",
     "scaled_numerical_df = pd.DataFrame(scaled_numerical, columns=numeric_features)\n",
     "\n",
     "scaled_numerical_df.head()"
@@ -705,8 +701,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -931,34 +929,35 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Combine each DataFrame into one single DataFrame.\n",
     "processed_features_df = pd.concat([scaled_numerical_df, encoded_categorical_df], axis=1)\n",
     "processed_features_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9805115712545676\n",
+      "0.9795980511571255\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         edm       0.97      0.99      0.98       611\n",
-      "       latin       0.99      0.98      0.99       520\n",
-      "         pop       1.00      0.98      0.99       541\n",
-      "         r&b       0.99      0.98      0.98       570\n",
-      "         rap       0.96      0.99      0.97       560\n",
-      "        rock       0.98      0.98      0.98       482\n",
+      "         edm       0.98      0.99      0.98       610\n",
+      "       latin       0.99      0.97      0.98       538\n",
+      "         pop       1.00      0.98      0.99       544\n",
+      "         r&b       0.98      0.97      0.97       512\n",
+      "         rap       0.95      0.99      0.97       583\n",
+      "        rock       0.98      0.99      0.99       497\n",
       "\n",
       "    accuracy                           0.98      3284\n",
       "   macro avg       0.98      0.98      0.98      3284\n",
@@ -972,24 +971,286 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
+    "# Pull input/output (X, y) for training and testing of KNN.\n",
     "X, y = processed_features_df, dataset['playlist_genre']\n",
     "\n",
+    "# Create training/testing split of data (10% of dataset goes to testing).\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1)\n",
     "\n",
+    "# Create and fit KNN Classifier taking into account 15 neighbors.\n",
     "knn = KNeighborsClassifier(n_neighbors=15)\n",
-    "\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
+    "# Predict with test data and compare to our expected output.\n",
     "y_pred = knn.predict(X_test)\n",
     "\n",
     "print(accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     track_id                       track_name   track_artist  \\\n",
+      "7236   04KTF78FFg8sOHC1BADqbY                     Hot In Herre          Nelly   \n",
+      "22542  1AY001zik4a6IFFE4ZrV9K                    XO Tour Llif3    Brasstracks   \n",
+      "736    4R0sTxCaskwCPbzkfXHfWg  Santa María (Feat. Busy Signal)       Bad Gyal   \n",
+      "4955   3djK2yDqJArNAzHyhzSf8G                            Gooey  Glass Animals   \n",
+      "13038  6WE7jSshLCuVKoCmobVKVf     Heartbreaker - 1990 Remaster   Led Zeppelin   \n",
+      "\n",
+      "       track_popularity          track_album_id track_album_name  \\\n",
+      "7236                 71  4HUUHHXBXImwksfbSPqE7q       Nellyville   \n",
+      "22542                48  3hlGRTIgscKpujd6FUmvKa    XO Tour Llif3   \n",
+      "736                  65  44I3wnIjshc9lxW23HXMW6      Santa Maria   \n",
+      "4955                  7  7jfkffCqKYEJmIgGOIJ9me             ZABA   \n",
+      "13038                63  70lQYZtypdCALtFVlQAcvx  Led Zeppelin II   \n",
+      "\n",
+      "      track_album_release_date                       playlist_name  \\\n",
+      "7236                2002-06-25  90s-2000s Southern Hip Hop / Crunk   \n",
+      "22542               2017-07-10                  Urban Contemporary   \n",
+      "736                 2019-07-05                         Todo Éxitos   \n",
+      "4955                2014-05-30                    Indie Poptimism!   \n",
+      "13038               1969-10-22          Southern Rock/Classic Rock   \n",
+      "\n",
+      "                  playlist_id playlist_genre  ... key  loudness  mode  \\\n",
+      "7236   5wsWBmQgDtKa8CEg7wTEMi            rap  ...  11    -4.753     0   \n",
+      "22542  4425cRh83Uzor4qCRfM9lb            r&b  ...  11    -4.666     0   \n",
+      "736    2ji5tRQVfnhaX1w9FhmSzk            pop  ...   0    -6.951     1   \n",
+      "4955   4hKPJNFIhdAg4pAksn78FJ            pop  ...  11   -13.427     0   \n",
+      "13038  0QUlq0LMDVXSBtbyYLTyZh           rock  ...   9    -9.366     1   \n",
+      "\n",
+      "       speechiness  acousticness  instrumentalness  liveness  valence  \\\n",
+      "7236        0.1200        0.2060          0.000000    0.0615    0.912   \n",
+      "22542       0.1870        0.0140          0.826000    0.1640    0.510   \n",
+      "736         0.3280        0.0538          0.000000    0.0970    0.427   \n",
+      "4955        0.0447        0.7290          0.000038    0.0927    0.105   \n",
+      "13038       0.0885        0.0746          0.494000    0.1320    0.654   \n",
+      "\n",
+      "         tempo  duration_ms  \n",
+      "7236   107.075       228240  \n",
+      "22542   77.549       210596  \n",
+      "736    142.465       154933  \n",
+      "4955   183.051       289307  \n",
+      "13038   97.161       254133  \n",
+      "\n",
+      "[5 rows x 23 columns]\n",
+      "Recommended Songs:\n",
+      "7237. Hot In Herre by Nelly\n",
+      "22543. XO Tour Llif3 by Brasstracks\n",
+      "737. Santa María (Feat. Busy Signal) by Bad Gyal\n",
+      "4956. Gooey by Glass Animals\n",
+      "13039. Heartbreaker - 1990 Remaster by Led Zeppelin\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recommend_top_5_songs(input_song, model, feature_data, original_data, numerical_features, categorical_features, scaler, encoder, top_n=5):\n",
+    "    \"\"\"\n",
+    "    Function that returns the N top songs recommended based on similarity to input song.\n",
+    "    \n",
+    "    input_song: dictionary containing teh features of the input song.\n",
+    "    model: the trained machine learning model\n",
+    "    feature_data: the dataframe containing the scaled and encoded of the processed features.\n",
+    "    original_data: the original dataset containing the song information.\n",
+    "    numerical_features: list of numerical feature names\n",
+    "    categorical_features: list of categorical feature names\n",
+    "    scaler: fitted scaler for numerical features\n",
+    "    encoder: fitted encoder for categorical features\n",
+    "    top_n: nb of recommendations to return (default is 5)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # convert input_song into dataframe for prediction\n",
+    "    input_song_df = pd.DataFrame([input_song])\n",
+    "    \n",
+    "    # features scaled and encoded like the training data\n",
+    "    input_song_scaled = scaler.transform(input_song_df[numerical_features])\n",
+    "    input_song_encoded = encoder.transform(input_song_df[categorical_features]).toarray()\n",
+    "    \n",
+    "    #combine scaled and encoded features\n",
+    "    processed_input_song = np.concatenate([input_song_scaled, input_song_encoded], axis=1)\n",
+    "    \n",
+    "    #predict the 5 nearest neighbors\n",
+    "    distances, indices = model.kneighbors(processed_input_song, n_neighbors=top_n)\n",
+    "    \n",
+    "    #get top n recommended songs\n",
+    "    recommended_songs = original_data.iloc[indices[0]]\n",
+    "    \n",
+    "    return recommended_songs\n",
+    "\n",
+    "#example input song\n",
+    "input_song = {\n",
+    "    \"track_popularity\": 80,\n",
+    "    \"danceability\": 0.7,\n",
+    "    \"energy\": 0.8,\n",
+    "    \"key\": 5,\n",
+    "    \"loudness\": -5.0,\n",
+    "    \"mode\": 1,\n",
+    "    \"speechiness\": 0.05,\n",
+    "    \"acousticness\": 0.2,\n",
+    "    \"instrumentalness\": 0.0,\n",
+    "    \"liveness\": 0.1,\n",
+    "    \"valence\": 0.9,\n",
+    "    \"tempo\": 120.0,\n",
+    "    \"playlist_genre\": \"pop\",\n",
+    "    \"playlist_subgenre\": \"dance pop\"\n",
+    "}\n",
+    "top_recommended_songs = recommend_top_5_songs(\n",
+    "    input_song=input_song,\n",
+    "    model=knn,\n",
+    "    feature_data=processed_features_df,\n",
+    "    original_data=dataset,\n",
+    "    numerical_features=numeric_features,\n",
+    "    categorical_features=categorical_features,\n",
+    "    scaler=scaler,\n",
+    "    encoder=encoder,\n",
+    "    top_n=5\n",
+    ")\n",
+    "print(top_recommended_songs)\n",
+    "\n",
+    "recommended_songs = top_recommended_songs[['track_name', 'track_artist']]\n",
+    "print(\"Recommended Songs:\")\n",
+    "for i, row in recommended_songs.iterrows():\n",
+    "    print(f\"{i + 1}. {row['track_name']} by {row['track_artist']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_top_5_songs_multiple(input_songs, model, feature_data, original_data, numerical_features, categorical_features, scaler, encoder, top_n=5):\n",
+    "    \"\"\"\n",
+    "    Function to recommend the top N songs based on similarity to the averaged attributes of multiple input songs.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # convert input songs into a df\n",
+    "    input_songs_df = pd.DataFrame(input_songs)\n",
+    "\n",
+    "    # calculate average of numerical features\n",
+    "    averaged_numerical = input_songs_df[numerical_features].mean().to_dict()\n",
+    "\n",
+    "    # take the most frequent categorical features (genre / subgenre)\n",
+    "    averaged_categorical = {col: input_songs_df[col].mode()[0] for col in categorical_features}\n",
+    "\n",
+    "    # combine numerical and categorical features into a single input\n",
+    "    averaged_input_song = {**averaged_numerical, **averaged_categorical}\n",
+    "\n",
+    "    # Use the existing recommend function with the averaged attributes\n",
+    "    recommended_songs = recommend_top_5_songs(\n",
+    "        input_song=averaged_input_song,\n",
+    "        model=model,\n",
+    "        feature_data=feature_data,\n",
+    "        original_data=original_data,\n",
+    "        numerical_features=numerical_features,\n",
+    "        categorical_features=categorical_features,\n",
+    "        scaler=scaler,\n",
+    "        encoder=encoder,\n",
+    "        top_n=top_n,\n",
+    "    )\n",
+    "\n",
+    "    return recommended_songs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommended Songs:\n",
+      "19360. La Forma en Que Me Miras by Super Yei\n",
+      "8932. Realtalk Infinity by Jigzaw\n",
+      "3004. Get Low by Dillon Francis\n",
+      "13215. Gypsy - 2018 Remaster by Fleetwood Mac\n",
+      "9654. Fuck Tha Police - Remastered 2006 by N.W.A.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Anaconda\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list of songs\n",
+    "input_songs = [\n",
+    "    {\n",
+    "        \"track_popularity\": 80,\n",
+    "        \"danceability\": 0.7,\n",
+    "        \"energy\": 0.8,\n",
+    "        \"key\": 5,\n",
+    "        \"loudness\": -5.0,\n",
+    "        \"mode\": 1,\n",
+    "        \"speechiness\": 0.05,\n",
+    "        \"acousticness\": 0.2,\n",
+    "        \"instrumentalness\": 0.0,\n",
+    "        \"liveness\": 0.1,\n",
+    "        \"valence\": 0.9,\n",
+    "        \"tempo\": 120.0,\n",
+    "        \"playlist_genre\": \"pop\",\n",
+    "        \"playlist_subgenre\": \"dance pop\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"track_popularity\": 60,\n",
+    "        \"danceability\": 0.6,\n",
+    "        \"energy\": 0.7,\n",
+    "        \"key\": 3,\n",
+    "        \"loudness\": -7.0,\n",
+    "        \"mode\": 0,\n",
+    "        \"speechiness\": 0.04,\n",
+    "        \"acousticness\": 0.3,\n",
+    "        \"instrumentalness\": 0.1,\n",
+    "        \"liveness\": 0.2,\n",
+    "        \"valence\": 0.8,\n",
+    "        \"tempo\": 115.0,\n",
+    "        \"playlist_genre\": \"pop\",\n",
+    "        \"playlist_subgenre\": \"indie pop\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# recommend songs based on the averaged attributes\n",
+    "recommended_songs = recommend_top_5_songs_multiple(\n",
+    "    input_songs=input_songs,\n",
+    "    model=knn,\n",
+    "    feature_data=processed_features_df,\n",
+    "    original_data=dataset,\n",
+    "    numerical_features=numeric_features,\n",
+    "    categorical_features=categorical_features,\n",
+    "    scaler=scaler,\n",
+    "    encoder=encoder,\n",
+    "    top_n=5\n",
+    ")\n",
+    "\n",
+    "print(\"Recommended Songs:\")\n",
+    "for i, row in recommended_songs.iterrows():\n",
+    "    print(f\"{i + 1}. {row['track_name']} by {row['track_artist']}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1003,7 +1264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
